# datacollector-api-client

./: .gitignore  LICENSE  README.rst  pyproject.toml
.github/workflows/: tests.yml
src/datacollector_api_client/: client.py  dbutils_proxy.py
tests/: conftest.py  test_datacollector_api_client.py
